Fix some API tests after r287341 https://bugs.webkit.org/show_bug.cgi?id=232857

Source/WebKit:

I found the cause of the strange failures and verified my "fix" on an Intel Mac and an Apple Silicon Mac.

* webpushd/PushClientConnection.mm:
(WebPushD::ClientConnection::hostAppCodeSigningIdentifier):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
(TestWebKitAPI::TEST):




Canonical link: https://commits.webkit.org/245489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287347 268f45cc-cd09-0410-ab3c-d52691b4dbfc