Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm
@@ -236,13 +236,6 @@ TEST(WebPushD, BasicCommunication)
 
         bool stringMatches = [nsMessage hasPrefix:@"[com.apple.WebKit.TestWebKitAPI"] || [nsMessage hasPrefix:@"[TestWebKitAPI"];
         stringMatches = stringMatches && [nsMessage hasSuffix:@" Turned Debug Mode on"];
-        
-#if PLATFORM(MAC) && !USE(APPLE_INTERNAL_SDK) && CPU(x86_64)
-        // ClientConnection::hostAppCodeSigningIdentifier returns an empty string,
-        // so the string is more like "[(0x7f8f4bd083f0) (1 )] Turned Debug Mode on".
-        // This is of no consequence, so just make the test pass.
-        stringMatches = true;
-#endif
 
         EXPECT_TRUE(stringMatches);
         if (!stringMatches)
@@ -334,24 +327,15 @@ TEST(WebPushD, PermissionManagement)
     static bool originOperationDone = false;
     static RetainPtr<WKSecurityOrigin> origin;
     [dataStore _getOriginsWithPushAndNotificationPermissions:^(NSSet<WKSecurityOrigin *> *origins) {
-#if PLATFORM(MAC) && !USE(APPLE_INTERNAL_SDK) && CPU(x86_64)
-        // ClientConnection::hostAppCodeSigningIdentifier returns an empty string,
-        // so Daemon::canRegisterForNotifications returns false.
-        // This is of no consequence, so just make the test pass.
-        EXPECT_EQ([origins count], 0u);
-#else
         EXPECT_EQ([origins count], 1u);
-#endif
         origin = [origins anyObject];
         originOperationDone = true;
     }];
 
     TestWebKitAPI::Util::run(&originOperationDone);
 
-#if !PLATFORM(MAC) || USE(APPLE_INTERNAL_SDK) || !CPU(x86_64)
     EXPECT_WK_STREQ(origin.get().protocol, "testing");
     EXPECT_WK_STREQ(origin.get().host, "main");
-#endif
 
     // If we failed to retrieve an expected origin, we will have failed the above checks
     if (!origin) {
